[gd_scene load_steps=19 format=3 uid="uid://ca5x3ydluem2l"]

[ext_resource type="Script" path="res://unique_scripts/derg.gd" id="1_f0al4"]
[ext_resource type="PackedScene" uid="uid://cyn87vardfo7w" path="res://Scenes/pattet.tscn" id="2_yxfeg"]
[ext_resource type="Texture2D" uid="uid://t1o5sduuhnx3" path="res://images/field/dergsheetS.png" id="3_v2sue"]
[ext_resource type="Texture2D" uid="uid://dd7hu0sh7ji7r" path="res://images/field/dergsheetSW.png" id="4_78pk8"]
[ext_resource type="Texture2D" uid="uid://bt5lfymokj23e" path="res://images/shado.png" id="5_cswua"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i5kw7"]
size = Vector2(83, 94)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpqo6"]
atlas = ExtResource("3_v2sue")
region = Rect2(210, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_745rd"]
atlas = ExtResource("3_v2sue")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvjmk"]
atlas = ExtResource("3_v2sue")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_w11jp"]
atlas = ExtResource("3_v2sue")
region = Rect2(210, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_741ee"]
atlas = ExtResource("3_v2sue")
region = Rect2(0, 210, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_1p27c"]
atlas = ExtResource("3_v2sue")
region = Rect2(210, 210, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsecx"]
atlas = ExtResource("3_v2sue")
region = Rect2(420, 210, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxt33"]
atlas = ExtResource("4_78pk8")
region = Rect2(0, 210, 300, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_l242a"]
atlas = ExtResource("4_78pk8")
region = Rect2(0, 0, 300, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7xyt"]
atlas = ExtResource("4_78pk8")
region = Rect2(310, 210, 300, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_msoxr"]
atlas = ExtResource("4_78pk8")
region = Rect2(620, 210, 300, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_mi1ji"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpqo6")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_745rd")
}],
"loop": false,
"name": &"Petend",
"speed": 5.0
}, {
"frames": [{
"duration": 1.5,
"texture": SubResource("AtlasTexture_kvjmk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w11jp")
}],
"loop": false,
"name": &"Petstart",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_741ee")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_1p27c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nsecx")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_1p27c")
}],
"loop": true,
"name": &"Sit",
"speed": 5.0
}, {
"frames": [{
"duration": 0.9,
"texture": SubResource("AtlasTexture_lxt33")
}, {
"duration": 0.9,
"texture": SubResource("AtlasTexture_l242a")
}, {
"duration": 0.9,
"texture": SubResource("AtlasTexture_f7xyt")
}, {
"duration": 0.9,
"texture": SubResource("AtlasTexture_msoxr")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[node name="Derg" type="RigidBody2D" groups=["Persist"]]
y_sort_enabled = true
position = Vector2(-1, -45)
gravity_scale = 0.0
script = ExtResource("1_f0al4")
pattet_part = ExtResource("2_yxfeg")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4.5, 1)
shape = SubResource("RectangleShape2D_i5kw7")
disabled = true

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
anchors_preset = -1
anchor_right = 0.01
offset_left = -48.0
offset_top = -50.0
offset_right = -3.0
offset_bottom = -5.0
scale = Vector2(2.25897, 2.31)
focus_mode = 0
shortcut_feedback = false
shortcut_in_tooltip = false
flat = true
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(4, 44)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_mi1ji")
animation = &"Walk"
autoplay = "Sit"
offset = Vector2(0.33333, -103)

[node name="shadow" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(6, 43)
scale = Vector2(0.6, 0.6)
texture = ExtResource("5_cswua")
offset = Vector2(-0.353845, -8.78269)
metadata/_edit_use_anchors_ = true

[node name="shadow2" type="Sprite2D" parent="."]
visible = false
y_sort_enabled = true
position = Vector2(-7.06066, 37.9397)
scale = Vector2(0.773475, 0.773475)
texture = ExtResource("5_cswua")
offset = Vector2(26, -10.157)
metadata/_edit_use_anchors_ = true

[node name="Patcooldown" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="Button" to="." method="_on_pat"]
[connection signal="timeout" from="Timer" to="." method="_on_boredom_time"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_pat_finished"]
[connection signal="timeout" from="Patcooldown" to="." method="_on_patcooldown_timeout"]
